feat: 修改主页样式

--- a/src/styles/lib/highlight.less
+++ b/src/styles/lib/highlight.less
@@ -535,7 +535,7 @@ html.dark {
 			color: #fff;
 		}
 		.text{
-			background-color: #141718;
+			// background-color: #141718;
 			p{
 				color: #e2e2e2;
 			}
@@ -553,7 +553,7 @@ html.dark {
 			}
 			.gpts-item{
 				background-color: #232627;
-				border: 1px solid #3a3b3c;
+				border: 1px solid #333435;
 				.name{
 					color: #a7a8a9;
 					&:hover{
@@ -1480,7 +1480,7 @@ position: relative;
 	}
 }
 .gpts-box{
-	color: #494747;
+	 color: #494747;
 	h1{
 		font-weight: 700;
 		font-size: 40px;
@@ -1492,7 +1492,7 @@ position: relative;
 		float: left;
 	}
 	.text{
-		background-color: #e8eaf1;
+		// background-color: #e8eaf1;
 		border-radius: 20px;
 		float: left;
 		width: calc(100% - 100px);
@@ -1523,13 +1523,14 @@ position: relative;
 			}
 		}
 		.gpts-item{
-			background-color: #ffffff;
+			background-color: #e8eaf1;
 			border-radius: 10px;
-			border: 1px solid #e8eaf1;
+			// border: 1px solid #e8eaf1;
 			float: left;
+			height: 120px;
 			.n-image{
 				float: left;
-				margin-top: 5px;
+				margin-top: 10px;
 			}
 			.info{
 				white-space: nowrap;
