--- a/src/styles/lib/highlight.less
+++ b/src/styles/lib/highlight.less
@@ -1346,7 +1346,7 @@ position: relative;
 		padding: 0;
 		background-color: #fff;
 		border-bottom-right-radius: 20px;
-		// height: 156px;
+		 height: 600px;
 		.chat-footer{
 			border-bottom-right-radius: 12px;
 			position: relative;
@@ -1357,10 +1357,6 @@ position: relative;
 			border: 2px solid #fff;
 			margin: 0 40px 40px;
 			border-radius: 16px;
-			.items-base {
-				// position: absolute;
-				// top: -70px;
-			}
 			.top-bar{
 				& .left{
 					display: flex;
