fix: 修复前端页面缺少左侧菜单
Closes https://github.com/ageerle/ruoyi-web/issues/2

--- a/src/styles/lib/highlight.less
+++ b/src/styles/lib/highlight.less
@@ -535,7 +535,7 @@ html.dark {
 			color: #fff;
 		}
 		.text{
-			// background-color: #141718;
+			background-color: #141718;
 			p{
 				color: #e2e2e2;
 			}
@@ -553,7 +553,7 @@ html.dark {
 			}
 			.gpts-item{
 				background-color: #232627;
-				border: 1px solid #333435;
+				border: 1px solid #3a3b3c;
 				.name{
 					color: #a7a8a9;
 					&:hover{
@@ -1346,7 +1346,7 @@ position: relative;
 		padding: 0;
 		background-color: #fff;
 		border-bottom-right-radius: 20px;
-		 height: 600px;
+		// height: 156px;
 		.chat-footer{
 			border-bottom-right-radius: 12px;
 			position: relative;
@@ -1357,6 +1357,10 @@ position: relative;
 			border: 2px solid #fff;
 			margin: 0 40px 40px;
 			border-radius: 16px;
+			.items-base {
+				// position: absolute;
+				// top: -70px;
+			}
 			.top-bar{
 				& .left{
 					display: flex;
@@ -1476,7 +1480,7 @@ position: relative;
 	}
 }
 .gpts-box{
-	 color: #494747;
+	color: #494747;
 	h1{
 		font-weight: 700;
 		font-size: 40px;
@@ -1488,7 +1492,7 @@ position: relative;
 		float: left;
 	}
 	.text{
-		// background-color: #e8eaf1;
+		background-color: #e8eaf1;
 		border-radius: 20px;
 		float: left;
 		width: calc(100% - 100px);
@@ -1519,14 +1523,13 @@ position: relative;
 			}
 		}
 		.gpts-item{
-			background-color: #e8eaf1;
+			background-color: #ffffff;
 			border-radius: 10px;
-			// border: 1px solid #e8eaf1;
+			border: 1px solid #e8eaf1;
 			float: left;
-			height: 120px;
 			.n-image{
 				float: left;
-				margin-top: 10px;
+				margin-top: 5px;
 			}
 			.info{
 				white-space: nowrap;
