--- a/src/styles/lib/github-markdown.less
+++ b/src/styles/lib/github-markdown.less
@@ -102,7 +102,7 @@ html {
   background-color: var(--color-canvas-default);
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 30px;//1.5;
   word-wrap: break-word;
 }
 
