fix: 修复暗黑模式下输入框背景颜色默认白色

--- a/src/styles/lib/highlight.less
+++ b/src/styles/lib/highlight.less
@@ -230,7 +230,7 @@ html.dark {
       background-color: #232728;
     }
     .message-request {
-      background-color: #a1dc95;
+      background-color: #a4dd98;
     }
 
     .message-request {
